# TRMesh

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TREditorSharp.csproj
src/: Connectivity.cs  FaceUvProjector.cs  HalfEdgeMesh.EdgeFlip.cs  HalfEdgeMesh.EdgeRemoval.cs  HalfEdgeMesh.FaceMerge.cs  HalfEdgeMesh.FaceSplit.cs  HalfEdgeMesh.Iterators.cs  HalfEdgeMesh.TopologyPatch.cs  HalfEdgeMesh.Validate.cs  HalfEdgeMesh.VertexRemoval.cs  HalfEdgeMesh.cs  Handle.cs  HandleAliases.cs  IComponentColumn.cs  ManagedColumn.cs  NativeColumn.cs  SlotPool.cs  SpatialMesh.Bevel.cs  SpatialMesh.Bridge.cs  SpatialMesh.EdgeCollapse.cs  SpatialMesh.EdgeExtrude.cs  SpatialMesh.EdgeMerge.cs  SpatialMesh.EdgeSplit.cs  SpatialMesh.Extrude.cs  SpatialMesh.FaceSplit.cs  SpatialMesh.FillHole.cs  SpatialMesh.Geometry.cs  SpatialMesh.Inset.cs  SpatialMesh.VertexBevel.cs  SpatialMesh.VertexMerge.cs  SpatialMesh.cs  Tags.cs  TopologyEditScope.cs  TopologyPatch.cs  TopologyPatchState.cs  TopologyStorage.cs  test.cpp
tests/: BinaryMeshSerializationTests.cs  BuilderRoundTripTests.cs  ComponentEntrySnapshotTests.cs  CylinderBuilderTests.cs  EntitySnapshotTests.cs  FaceUvProjectorTests.cs  GlobalUsings.cs  HalfEdgeEdgeFlipTests.cs  HalfEdgeEdgeRemovalTests.cs  HalfEdgeFaceMergeTests.cs  HalfEdgeFaceRemovalTests.cs  HalfEdgeFaceSplitTests.cs  HalfEdgeIterationTests.cs  HalfEdgeMeshValidationTests.cs  HalfEdgeQueryTests.cs  HalfEdgeVertexRemovalTests.cs  HandleTests.cs  NativeColumnTests.cs  ObjReaderTests.cs  SparseSetTests.cs  SpatialMeshBevelTests.cs  SpatialMeshBridgeTests.cs  StorageTests.cs  (+19 more)
(+22 files in other folders)
